[workspace]
members = ["tools/rusty_retriever", "year2015", "year2023"]
default-members = ["year2015", "year2023"]
resolver = "2"

[workspace.package]
authors = ["Cosmin Gabriel Georgescu <cosmin-gabriel.georgescu@s.unibuc.ro>"]
keywords = ["AdventOfCode", "AOC"]
repository = "https://github.com/CosminGGeorgescu/AdventOfCode.git"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
